cabal-version: 3.0

name:        grpc-mqtt
description: A library for making gRPC requests over an MQTT connection
version:     0.1.0.0
synopsis:    Run gRPC services over an MQTT connection
license:     Apache-2.0
author:      Arista Networks
maintainer:  opensource@awakesecurity.com
copyright:   2021-2022 Arista Networks
category:    Network
build-type:  Custom

extra-source-files:
  README.md

tested-with:
  GHC == 8.10.4

custom-setup
  setup-depends: base, Cabal, filepath

common common
  default-language:   Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-fields
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
    -Wno-unused-top-binds
    -fshow-warning-groups

  default-extensions:
    BangPatterns BlockArguments DataKinds DefaultSignatures DeriveDataTypeable
    DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable
    DerivingStrategies DerivingVia FlexibleContexts FlexibleInstances
    FunctionalDependencies GADTs ImportQualifiedPost InstanceSigs KindSignatures
    LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude
    OverloadedStrings PatternSynonyms RankNTypes ScopedTypeVariables
    StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeOperators

  build-depends:
    , async
    , base >=4.14 && <4.15
    , bytestring
    , containers
    , deepseq
    , grpc-haskell
    , grpc-haskell-core
    , net-mqtt >= 0.8.1
    , proto3-suite
    , proto3-wire
    , relude
    , text
    , turtle
    , vector

library
  import:      common
  ghc-options: -O2

  hs-source-dirs:
    src

  exposed-modules:
    Network.GRPC.HighLevel.Extra
    Network.GRPC.MQTT
    Network.GRPC.MQTT.Client
    Network.GRPC.MQTT.Compress
    Network.GRPC.MQTT.Core
    Network.GRPC.MQTT.Logging
    Network.GRPC.MQTT.Message
    Network.GRPC.MQTT.Message.AuxControl
    Network.GRPC.MQTT.Message.Packet
    Network.GRPC.MQTT.Message.Request
    Network.GRPC.MQTT.Message.Response
    Network.GRPC.MQTT.Message.Stream
    Network.GRPC.MQTT.Message.TH
    Network.GRPC.MQTT.Option
    Network.GRPC.MQTT.Option.Batched
    Network.GRPC.MQTT.Option.CLevel
    Network.GRPC.MQTT.Proto
    Network.GRPC.MQTT.Proto.TH
    Network.GRPC.MQTT.RemoteClient
    Network.GRPC.MQTT.RemoteClient.Session
    Network.GRPC.MQTT.Serial
    Network.GRPC.MQTT.TH.Client
    Network.GRPC.MQTT.TH.Proto
    Network.GRPC.MQTT.TH.RemoteClient
    Network.GRPC.MQTT.Topic
    Network.GRPC.MQTT.Types
    Network.GRPC.MQTT.Wrapping

  other-modules:
    Control.Concurrent.TMap
    Network.GRPC.HighLevel.Orphans
    Network.GRPC.MQTT.Message.Packet.Core
    Network.GRPC.MQTT.Message.Request.Core
    Proto.Mqtt
    Proto3.Suite.Orphans
    Proto3.Suite.DotProto.Internal.Compat
    Proto3.Wire.Decode.Extra
    Proto3.Wire.Encode.Extra
    Proto3.Wire.Types.Extra
    Proto3.Wire.Types.Extra.TH

  -- Oddly, adding this build-tool-depends can cause us to select the
  -- wrong version of the proto3-suite library when building sources.
  -- Cabal seems to just look up the latest, rather than using
  -- the one provided by the nix-shell environment.
  --
  -- build-tool-depends:
  --   proto3-suite:compile-proto-file

  build-depends:
    , conduit-extra
    , connection
    , ghc-prim
    , mtl
    , network-conduit-tls
    , nonce
    , safe-exceptions
    , stm
    , template-haskell
    , time
    , unliftio
    , unliftio-core
    , unordered-containers
    , zstd

test-suite test
  import:  common
  type:    exitcode-stdio-1.0
  main-is: Test.hs

  hs-source-dirs:
    test

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N2
    -O2

  other-modules:
    Proto.Service
    Proto.Message
    Test.Network.GRPC.HighLevel.Extra
    Test.Network.GRPC.HighLevel.Extra.Gen
    Test.Network.GRPC.MQTT
    Test.Network.GRPC.MQTT.Compress
    Test.Network.GRPC.MQTT.Compress.Gen
    Test.Network.GRPC.MQTT.Message
    Test.Network.GRPC.MQTT.Message.Gen
    Test.Network.GRPC.MQTT.Message.Packet
    Test.Network.GRPC.MQTT.Message.Request
    Test.Network.GRPC.MQTT.Message.Stream
    Test.Network.GRPC.MQTT.Option
    Test.Network.GRPC.MQTT.Option.CLevel
    Test.Network.GRPC.MQTT.Option.Gen
    Test.Network.GRPC.MQTT.Serial
    Test.Service
    Test.Suite.Config
    Test.Suite.Fixture
    Test.Suite.Wire
    Test.Proto.Clients
    Test.Proto.Message.Gen
    Test.Proto.RemoteClients
    Test.Proto.Service

  -- Oddly, adding this build-tool-depends can cause us to select the
  -- wrong version of the proto3-suite library when building sources.
  -- Cabal seems to just look up the latest, rather than using
  -- the one provided by the nix-shell environment.
  --
  -- build-tool-depends:
  --   proto3-suite:compile-proto-file

  build-depends:
    , connection
    , data-default
    , grpc-mqtt
    , hedgehog
    , mtl
    , stm
    , tasty
    , tasty-hedgehog < 1.1.0.0
    , tasty-hunit
    , tls
    , uuid
    , containers
