cabal-version: 3.0

name:        grpc-mqtt
description: A library for making gRPC requests over an MQTT connection
version:     0.1.0.0
synopsis:    Run gRPC services over an MQTT connection
license:     Apache-2.0
author:      Arista Networks
maintainer:  opensource@awakesecurity.com
copyright:   2021-2022 Arista Networks
category:    Network
build-type:  Custom

extra-source-files:
  README.md

tested-with:
  GHC == 8.10.4

custom-setup
  setup-depends: base, Cabal, filepath

common common
  default-language:   Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-fields
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
    -Wno-unused-top-binds
    -fshow-warning-groups

  default-extensions:
    BangPatterns BlockArguments DataKinds DefaultSignatures DeriveDataTypeable
    DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable
    DerivingStrategies DerivingVia FlexibleContexts FlexibleInstances
    FunctionalDependencies GADTs ImportQualifiedPost InstanceSigs KindSignatures
    LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude
    OverloadedStrings PatternSynonyms RankNTypes ScopedTypeVariables
    StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeOperators

  build-depends:
    , async >= 2.2.3 && < 2.3
    , base >= 4.14 && < 4.15
    , bytestring >= 0.10.6.0 && < 0.12.0
    , containers >= 0.5 && < 0.7
    , deepseq == 1.4.*
    , grpc-haskell >= 0.3.0 && < 0.4
    , grpc-haskell-core >= 0.2.0 && < 0.4
    , net-mqtt >= 0.8.2 && < 0.9
    , proto3-suite >= 0.5.2 && < 0.6
    , proto3-wire >= 1.2.2 && < 1.5
    , relude >= 0.7.0 && < 0.8
    , text >= 0.2 && < 1.3
    , turtle < 1.6.0 || >= 1.6.1 && < 1.7.0
    , vector >= 0.11 && < 0.13

library
  import:      common
  ghc-options: -O2

  hs-source-dirs:
    src

  exposed-modules:
    Network.GRPC.HighLevel.Extra
    Network.GRPC.MQTT
    Network.GRPC.MQTT.Client
    Network.GRPC.MQTT.Compress
    Network.GRPC.MQTT.Core
    Network.GRPC.MQTT.Logging
    Network.GRPC.MQTT.Message
    Network.GRPC.MQTT.Message.AuxControl
    Network.GRPC.MQTT.Message.Packet
    Network.GRPC.MQTT.Message.Request
    Network.GRPC.MQTT.Message.Response
    Network.GRPC.MQTT.Message.Stream
    Network.GRPC.MQTT.Message.TH
    Network.GRPC.MQTT.Option
    Network.GRPC.MQTT.Option.Batched
    Network.GRPC.MQTT.Option.CLevel
    Network.GRPC.MQTT.Proto
    Network.GRPC.MQTT.Proto.TH
    Network.GRPC.MQTT.RemoteClient
    Network.GRPC.MQTT.RemoteClient.Session
    Network.GRPC.MQTT.Serial
    Network.GRPC.MQTT.TH.Client
    Network.GRPC.MQTT.TH.Proto
    Network.GRPC.MQTT.TH.RemoteClient
    Network.GRPC.MQTT.Topic
    Network.GRPC.MQTT.Types
    Network.GRPC.MQTT.Wrapping

  other-modules:
    Control.Concurrent.TMap
    Network.GRPC.HighLevel.Orphans
    Network.GRPC.MQTT.Message.Packet.Core
    Network.GRPC.MQTT.Message.Request.Core
    Proto.Mqtt
    Proto3.Suite.Orphans
    Proto3.Suite.DotProto.Internal.Compat
    Proto3.Wire.Decode.Extra
    Proto3.Wire.Encode.Extra
    Proto3.Wire.Types.Extra
    Proto3.Wire.Types.Extra.TH

  -- Oddly, adding this build-tool-depends can cause us to select the
  -- wrong version of the proto3-suite library when building sources.
  -- Cabal seems to just look up the latest, rather than using
  -- the one provided by the nix-shell environment.
  --
  -- build-tool-depends:
  --   proto3-suite:compile-proto-file

  build-depends:
    , conduit-extra >= 1.3.5 && < 1.4
    , connection >= 0.3.1 && < 0.4
    , ghc-prim >= 0.6.1 && < 0.7
    , mtl >= 2.2.2 && < 2.3
    , network-conduit-tls >= 1.3.2 && < 1.4
    , nonce >= 1.0.7 && < 1.1
    , safe-exceptions >= 0.1.7 && < 0.2
    , stm >= 2.5.0 && < 2.6
    , template-haskell >= 2.16.0 && < 2.17
    , time >= 1.9.3 && < 1.10
    , unliftio >= 0.2.15 && < 0.3
    , unliftio-core >= 0.2.0 && < 0.3
    , unordered-containers >= 0.2.13 && < 0.3
    , zstd >= 0.1.2 && < 0.2

-- cabal v2-test +RTS -N4 -I2 -qb -qg -RTS
test-suite test
  import:  common
  type:    exitcode-stdio-1.0
  main-is: Test.hs

  hs-source-dirs:
    test

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N4"
    -O2

  other-modules:
    Proto.Service
    Proto.Message
    Test.Network.GRPC.HighLevel.Extra
    Test.Network.GRPC.HighLevel.Extra.Gen
    Test.Network.GRPC.MQTT
    Test.Network.GRPC.MQTT.Compress
    Test.Network.GRPC.MQTT.Compress.Gen
    Test.Network.GRPC.MQTT.Message
    Test.Network.GRPC.MQTT.Message.Gen
    Test.Network.GRPC.MQTT.Message.Packet
    Test.Network.GRPC.MQTT.Message.Request
    Test.Network.GRPC.MQTT.Message.Stream
    Test.Network.GRPC.MQTT.Option
    Test.Network.GRPC.MQTT.Option.CLevel
    Test.Network.GRPC.MQTT.Option.Gen
    Test.Network.GRPC.MQTT.Serial
    Test.Service
    Test.Suite.Config
    Test.Suite.Fixture
    Test.Suite.Wire
    Test.Proto.Clients
    Test.Proto.RemoteClients
    Test.Proto.Service

  -- Oddly, adding this build-tool-depends can cause us to select the
  -- wrong version of the proto3-suite library when building sources.
  -- Cabal seems to just look up the latest, rather than using
  -- the one provided by the nix-shell environment.
  --
  -- build-tool-depends:
  --   proto3-suite:compile-proto-file

  build-depends:
    , connection
    , data-default
    , grpc-mqtt
    , hedgehog
    , mtl >= 2.2.2 && < 2.3
    , stm
    , tasty
    , tasty-hedgehog < 1.1.0.0
    , tasty-hunit
    , tls
    , uuid
    , containers
